client/src/App.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.navbar {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding-top: .5rem;
  padding-bottom: .5rem;
  background-color:#CC0000;
}


.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style:none;
}

.navlink {
  display: block;
  align-items: center;
  text-align: center;
  list-style: none;
  color: white;
  font-family: 'Roboto', sans-serif;
  text-decoration: none;
  display:block;
  font-size: 1rem;
  padding: 15px;
}

.navlink:hover{
  cursor: pointer;
  color:lightgray;
}

.justify-content-end {
  justify-content: flex-end;
}

.sticky-top {
  position:sticky;
  top:0;
}

.container {  
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding-right: var(--bs-gutter-x, 0.75rem);
  padding-left: var(--bs-gutter-x, 0.75rem);
  margin-right: auto;
  margin-left: auto;
  max-width: 1000px;
  
}

.flex {
  display: flex;
  flex-wrap: wrap;
}

ul {
  margin-top: 0px;
}

.example{
  padding: 3rem;
  background-color: #CC0000;
  color: white;
}

.section-detector-prompt {
  background-color:white;
  text-align: center;
  margin-top: 1rem;
}

p {
  font-family:'Roboto', sans-serif;
  margin: 1rem;
}

.header, 
.small-header {
  font-weight: 800;
  font-family: 'Roboto', sans-serif;
  font-size: 3rem;
  margin: 1rem;
}

.small-header {
  font-size: 2rem;
  text-align: center;
  margin: auto;
  padding: 20px;
}

form {
  position: relative;
  width: 500px;
  height: 330px;
  border: 4px dashed black;
  margin: auto;
  padding: auto;
  text-align: center;
}

.alignLeft {
  text-align: left;
}

form input{
  position:absolute;
  width: 100%;
  height: 87%;
  outline: none;
  opacity: 0;
}

#submitButton {
  margin: auto;
  margin-top: 5px;
  margin-bottom: 5px;
  color: #fff;
  background: #CC0000;
  border: none;
  width: 480px;
  height: 35px;
  border-radius: 4px;
  transition: all .2s ease;
  outline: none;
}

#submitButton:hover{
  background: #CC0000;
	color: #0C5645;
}
#submitButton:active{
  border:0;
}


#previewImage {
  max-width: 480px;
  width: 480px;
  height: 270px;
  border-radius: 5px;
  margin: auto;
}

#sampleImage {
  width: 500px;
  height: auto;
  border-radius: 10px;
}

